# broccoli-crawl

./: Dockerfile  docker-compose.yml  pyproject.toml  scrapy.cfg
broccoli/: items.py  middlewares.py  pipelines.py  settings.py
broccoli/spiders/: open_food.py
